--- a/sass/components/button.scss
+++ b/sass/components/button.scss
@@ -16,6 +16,7 @@
         height: 45px;
         width: 37%;
         max-width: 200px;
+        font-size: 1.4rem;
     }
     &:hover {
         background-color: $btn-background-hover;
