--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -7,7 +7,7 @@ $input-font: Raleway-Regular;
 $btn-font: Raleway-Bold;
 
 /* Font-size */
-$register-input: (mobile: 1rem, tablet: 1.17rem);
+$register-input: (mobile: 1rem, tablet: 1.17rem, desktop: 1.6rem);
 $h1-size: (mobile: 2.3rem, small-desktop: 2.5rem, large-desktop: 4rem);
 
 /* Margins & Paddings */
