--- a/sass/pages/register.scss
+++ b/sass/pages/register.scss
@@ -12,6 +12,9 @@
     @include small-desktops {
         padding: 80px map-get($map: $margin-desktop, $key: body) 60px;
     }
+    @include large-desktops {
+        padding: 110px 95px 75px map-get($map: $margin-desktop, $key: body);
+    }
     &__block {
         @include small-devices {
             max-width: $sm-devices-max-width;
@@ -19,16 +22,19 @@
         @include tablets {
             max-width: $tablets-max-width;
         }
-        @include small-desktops {
+        @include desktops {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            width: 100%;
         }
         &__text {
             text-align: center;
-            @include small-desktops {
+            @include desktops {
                 text-align: left;
                 width: 41.93%;
+                max-width: 520px;
+
             }
             & h2 {
                 margin : 0;
@@ -40,6 +46,9 @@
                 @include small-desktops {
                     font-size: map-get($map: $h1-size, $key: small-desktop);
                 }
+                @include large-desktops {
+                    font-size: 3rem;
+                }
             }
             & p {
                 line-height: map-get($map: $p-height, $key: mobile);
@@ -47,6 +56,10 @@
                 @include tablets {
                     line-height: map-get($map: $p-height, $key: tablet);
                     margin: 28px 0 10px;
+                }
+                @include large-desktops {
+                    font-size: 1.7rem;
+                    line-height: 2.5rem;
                 }
             }
         }
