--- a/sass/components/button.scss
+++ b/sass/components/button.scss
@@ -36,7 +36,8 @@
             height: 37px;
         }
         @include desktops {
-            width: 200px;
+            width: 42%;
+            min-width: 200px;
             height: 48px;
             font-size: 1.4rem;
         }
