--- a/sass/layouts/footer.scss
+++ b/sass/layouts/footer.scss
@@ -34,6 +34,7 @@ footer {
     & #contact {
         @include min-tablets {
             width: 34.37%;
+            max-width: 500px;
         }
         &__phone {
             margin-bottom: 20px;
@@ -47,6 +48,7 @@ footer {
     }
     & .footer-menu {
         width: 21.09%;
+        max-width: 300px;
     }
     & ul {
         padding: 0;
