--- a/sass/utils/mixins.scss
+++ b/sass/utils/mixins.scss
@@ -45,7 +45,7 @@
 @mixin section-position {
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-start;
 }
 
